--- a/README.org
+++ b/README.org
@@ -2,30 +2,33 @@
 This is a [[https://nixos.org/nix/][Nix]] expression that runs Emacs with [[https://magit.vc/][Magit]], a Git porcelain inside Emacs.
 It is inspired by [[https://github.com/vlandeiro/magit-docker][magit-docker]] (or [[https://www.reddit.com/r/emacs/comments/d0qnbf/dockerized_magit/][Dockerized Magit]]) but uses Nix instead of Docker.
 ** Prerequisites
-Since this program requires Nix, your operating system must support Nix.
-At present, Linux and Mac are supported, but Windows is not.
-However, you can install Nix on Windows Subsystem for Linux (WSL).
-** Installation
-Install Nix package manager, if you haven't already:
+This flake is supported on the following platforms:
 
-#+begin_src shell
-curl https://nixos.org/nix/install | sh
-#+end_src
+- Linux: =x86_64-linux=​ and =aarch64-linux=​
+- MacOS: =aarch64-darwin=​ and =x86_64-darwin=​
 
-For details, see [[https://nixos.org/nix/manual/#chap-installation][the Nix manual]].
+You also need Nix package manager, which you can install by following the instructions from here: https://nixos.org/download.html
 ** Usage
-Inside a Git repository, run the following command:
+This project is provided as a Nix flake, so you can run it directly without installation.
 
-#+begin_src shell
-nix-shell https://github.com/akirak/nix-magit/archive/master.tar.gz
+If you have already installed Nix with flakes enabled, you can start magit by running the following command inside a Git repository:
+
+#+begin_src bash
+  nix run github:akirak/nix-magit --no-write-lock-file
 #+end_src
 
-Then Emacs starts and Magit displays the status of your Git repository.
+If you haven't enabled flakes, you can temporarily enable the feature:
 
-It would be a good idea to define an alias for the command:
+#+begin_src bash
+  nix run github:akirak/nix-magit --no-write-lock-file \
+      --extra-experimental-features nix-command \
+      --extra-experimental-features flakes
+#+end_src
+
+You could define an alias for the command:
 
 #+begin_src shell
-alias magit='nix-shell https://github.com/akirak/nix-magit/archive/master.tar.gz'
+alias magit='nix run github:akirak/nix-magit --no-write-lock-file'
 #+end_src
 ** License
 MIT License
