docs: Update readme

--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-* Running Magit inside Nix-Shell
+* Running Magit as a Nix App
 This is a [[https://nixos.org/nix/][Nix]] expression that runs Emacs with [[https://magit.vc/][Magit]], a Git porcelain inside Emacs.
 It is inspired by [[https://github.com/vlandeiro/magit-docker][magit-docker]] (or [[https://www.reddit.com/r/emacs/comments/d0qnbf/dockerized_magit/][Dockerized Magit]]) but uses Nix instead of Docker.
 ** Prerequisites
